# telepublish

./: .env.example  Cargo.toml  Cross.toml
.github/workflows/: build.yml  release.yml
html/: index.html
migrations/: 001_bulletins.sql  002_bulletin_photos.sql  003_attachments.sql
migrations/sqlite/: 001_bulletins.sql  002_attachments.sql
migrations/ydb/: 001_bulletins.sql  002_attachments.sql
nginx/: telepublish.conf
scripts/: cleanup-demo.sh  demo.py  setup-demo.sh  start.sh
src/: main.rs  sqlite_storage.rs  storage.rs
tests/: integration.rs
