[package]
name = "telepublish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.12"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

ydb-unofficial = { git = "https://github.com/bool-rus/ydb-unofficial.git", branch = "bugfix/retry", features = ["sqlx", "auth-sa", "migrate"] }
sqlx = "0.7"
sqlx-macros = { version = "0.7", features = ["migrate"] }

log = "0.4"
simplelog = "0.12"
