[package]
name = "telepublish"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = {version ="0.12", features=["rustls"]}
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

ydb-unofficial = { version = "0.6.5", features = ["sqlx", "auth-sa", "migrate"] }
sqlx = { version = "0.7", features = ["sqlite", "migrate"] }
sqlx-macros = { version = "0.7", features = ["migrate"] }

log = "0.4"
simplelog = "0.12"

axum = "0.7"
reqwest = { version = "0.11", features = ["rustls-tls", "multipart"] }
s3 = "0"
futures-util = "0.3"
async-trait = "0.1"
